packages/wasm/ballerina-lang-go/parser/testdata/tokens/error/distinct_error_test_negative.token
(type 4 0x00 ())
(ident, "Foo" 3 0x00 ())
(distinct 8 0x00 ())
(error 5 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "Fee" 3 0x00 ())
(distinct 8 0x00 ())
(ident, "Foo" 3 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "Bar" 3 0x00 ())
(distinct 8 0x00 ())
(error 5 0x00 ())
(< 1 0x00 ())
(record 6 0x00 ())
({| 2 0x00 ())
(int 3 0x00 ())
(ident, "code" 4 0x00 ())
(; 1 0x00 ())
(|} 2 0x00 ())
(> 1 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "testFooError" 12 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(ident, "Foo" 3 0x00 ())
({ 1 0x00 ())
(ident, "Bar" 3 0x00 ())
(ident, "b" 1 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "Bar" 3 0x00 ())
(( 1 0x00 ())
(string, ""message"" 9 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(ident, "foo" 3 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "Foo" 3 0x00 ())
(( 1 0x00 ())
(string, ""error message"" 15 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(ident, "Foo" 3 0x00 ())
(ident, "f" 1 0x00 ())
(= 1 0x00 ())
(ident, "foo" 3 0x00 ())
(; 1 0x00 ())
(ident, "Fee" 3 0x00 ())
(ident, "e" 1 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(ident, "Fee" 3 0x00 ())
(( 1 0x00 ())
(string, ""message"" 9 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(ident, "Foo" 3 0x00 ())
(ident, "k" 1 0x00 ())
(= 1 0x00 ())
(ident, "e" 1 0x00 ())
(; 1 0x00 ())
(return 6 0x00 ())
(ident, "foo" 3 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
